# Atlas

./: .gitgnore  .gitignore  Atlas.vcxproj  AtlasCore.cpp  AtlasCore.h  AtlasExtension.cpp  AtlasExtension.h  AtlasFile.cpp  AtlasFile.h  AtlasLogger.cpp  AtlasMain.cpp  AtlasParser.cpp  CMakeLists.txt  GenericVariable.cpp  Makefile.extra  Pointer.cpp  Pointer.h  PointerHandler.cpp  PointerHandler.h  ReadMe.txt  stdafx.h
